--- a/main.html
+++ b/main.html
@@ -3,18 +3,62 @@
 
 <head>
     <title>ReTech</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="main.css" rel="stylesheet" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="main.css">
 
 
 </head>
 
 <body>
+
+
+    <nav class="navbar bg-dark navbar-expand-sm navbar-dark fixed-top">
+        <div class="container">
+            <a href="/" class="navbar-brand">
+                <i class="fas fa-recycle"></i> &nbsp;ReTech
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+            <div id="navbarCollapse" class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                                    Home
+                                </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                                    Products
+                                </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                                    About
+                                </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">
+                                    Contact
+                                </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
