--- a/main.html
+++ b/main.html
@@ -20,12 +20,11 @@
 </head>
 
 <body>
-
-
+    <!-- Navbar -->
     <nav class="navbar bg-dark navbar-expand-sm navbar-dark fixed-top">
         <div class="container">
             <a href="/" class="navbar-brand">
-                <i class="fas fa-recycle"></i> &nbsp;ReTech
+                <img src="logo/retech_logo_2.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
@@ -59,6 +58,133 @@
 
         </div>
     </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Heading Row -->
+        <div class="row align-items-center my-5">
+            <div class="col-lg-7">
+                <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
+            </div>
+            <!-- /.col-lg-8 -->
+            <div class="col-lg-5">
+                <h1 class="font-weight-light">WHY RETECH?</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sint, quibusdam vel rerum debitis odio totam beatae, itaque cupiditate nesciunt voluptatibus sapiente esse inventore doloribus modi? Aspernatur ab consectetur tenetur. Itaque
+                    cupiditate nesciunt voluptatibus sapiente esse inventore doloribus modi? Aspernatur ab consectetur tenetur.</p>
+
+            </div>
+            <!-- /.col-md-4 -->
+        </div>
+        <!-- / Heading row -->
+
+        <!-- Call to Action Well -->
+        <div class="card text-white bg-warning my-5 py-4 text-center">
+            <div class="card-body bg-info">
+                <p class="text-white">
+                    <h4>THINK THE FUTURE: Reuse To Reduce Enormously Increasing Waste Around The World!!!</h4>
+                </p>
+            </div>
+        </div>
+
+        <!-- Content Row -->
+        <div class="row">
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/motorola.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">Motorola Moto G7 Power</a>
+                        </h4>
+                        <h5>1200 Kr</h5>
+                        <p class="card-text">
+                            Motorola G7 Power i mkt fint skick, sparsamt använd. Skärmskydd sedan dag 1. Svart färg. Olåst, fungerar med alla operatörer.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/Jbl.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">JBL, Infinity och Akai</a>
+                        </h4>
+                        <h5>800 Kr</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/Nikon D750.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">Nikon D750</a>
+                        </h4>
+                        <h5>7900 kr</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/Philips 42 TV.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">Philips 42 TV</a>
+                        </h4>
+                        <h5>400 Kr</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/Google Home Mini.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">Google Home Mini</a>
+                        </h4>
+                        <h5>250 Kr</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="img/HP Elitebook 8470p.png" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">HP Elitebook 8470p</a>
+                        </h4>
+                        <h5>1600 Kr</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+        <!-- / content row -->
+
+    </div>
+    <!-- /.container -->
+
+
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
