added drapdown to navbar

--- a/main.html
+++ b/main.html
@@ -37,11 +37,26 @@
                                     Home
                                 </a>
                     </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Products
+                        </a>
+                        <div class="dropdown-menu bg-dark">
+                            <a class="dropdown-item text-light" href="#">Computers</a>
+                            <a class="dropdown-item text-light" href="#">Phones</a>
+                            <a class="dropdown-item text-light" href="#">TVs</a>
+                            <a class="dropdown-item text-light" href="#">Cameras</a>
+                            <a class="dropdown-item text-light" href="#">Other Techs</a>
+                        </div>
+                    </li>
+
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
-                                    Products
+                        <a href="#" class="nav-link active text-warning">
+                                    Latest Products
                                 </a>
                     </li>
+
                     <li class="nav-item">
                         <a href="#" class="nav-link active">
                                     About
