--- a/html/products.html
+++ b/html/products.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="../css/products.css" rel="stylesheet" />
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -19,7 +19,7 @@
             <nav class="navbar bg-dark navbar-expand-sm navbar-dark fixed-top">
                 <div class="container">
                     <a href="/" class="navbar-brand">
-                        <img src="logo/retech_logo_2.png" alt="">
+                        <img src="../logo/retech_logo_2.png" alt="">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
                                 <span class="navbar-toggler-icon"></span>
@@ -75,7 +75,7 @@
             <!-- Heading Row -->
             <div class="row align-items-center my-5">
                 <div class="col-lg-7">
-                    <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
+                    <img class="img-fluid rounded mb-4 mb-lg-0" src="../img/foto_44.jpg" alt="why retech">
                 </div>
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-5">
@@ -109,8 +109,8 @@
                     <div class="col-6" id="modalPhoto">
                     </div>
                     <div class="col-6" id="modalInfo">
-                    <p id="pTitle" class="col-12"> som text</p>
-                    <p id="pDescriptio " class="col-12">text text 2</p>
+                    <p id="pCond" class="col-12"> som text</p>
+                    <p id="pDesc" class="col-12">text text 2</p>
                     <p id="pYear" class="col-12"></p>
                     </div>  
                     </div>
@@ -124,7 +124,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="../js/products.js"></script>
 
 </body>
 
