update products + localstories

--- a/html/products.html
+++ b/html/products.html
@@ -103,7 +103,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                     <h2 id="modaltitle">ModalHeader</h2>
-                    <span class="close">&times;</span>
+                    <button type="close" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="row" id="modalBody">
                     <div class="col-6" id="modalPhoto">
