updated products & modal

--- a/html/products.html
+++ b/html/products.html
@@ -115,7 +115,7 @@
                     </div>  
                     </div>
                     <div class="modal-footer">
-                    <h4 id="footermodal">modal footer</h4>
+                    <button type="button" class="modalBuy">Buy</button>
                     </div>
                 </div>
             </div>
