--- a/main.html
+++ b/main.html
@@ -14,97 +14,120 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
+
     <link rel="stylesheet" href="main.css">
 
 
 </head>
 
 <body>
+    <!-- Carousel -->
+    <div class="container-fluid">
+        <div class="col-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="my-carousel">
+                            <img src="img/bild1.jpg" class="w-50" alt="...">
+                            <img src="img/bild2.jpg" class="w-50" alt="...">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="my-carousel">
+                            <img src="img/bild3.jpg" class="w-50" alt="...">
+                            <img src="img/bild4.jpg" class="w-50" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    <hr class=" mt-4">
+
     <!-- Navbar -->
-    <nav class="navbar bg-dark navbar-expand-sm navbar-dark fixed-top">
+    <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top" id="nav-main">
         <div class="container">
-            <a href="/" class="navbar-brand">
+            <a href="main.html" class="navbar-brand">
                 <img src="logo/retech_logo_2.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
-                                    Home
-                                </a>
+                        <a href="#" class="nav-link active"><i class="fa fa-fw fa-home"></i>
+                        </a>
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                            Products
+                        <a href="product.html" class="nav-link active">
+                            PRODUCTS
                         </a>
-                        <div class="dropdown-menu bg-dark">
-                            <a class="dropdown-item text-light" href="#">Computers</a>
-                            <a class="dropdown-item text-light" href="#">Phones</a>
-                            <a class="dropdown-item text-light" href="#">TVs</a>
-                            <a class="dropdown-item text-light" href="#">Cameras</a>
-                            <a class="dropdown-item text-light" href="#">Other Techs</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="#" class="nav-link active text-warning">
-                                    Latest Products
-                                </a>
                     </li>
 
                     <li class="nav-item">
                         <a href="#" class="nav-link active">
-                                    About
-                                </a>
+                            ABOUT
+                        </a>
                     </li>
 
                     <li class="nav-item">
-                        <a href="#" class="nav-link active">
-                                    Contact
-                                </a>
+                        <a href="#footer" class="nav-link active">
+                            CONTACT
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="checkout.html" class="nav-link active"> <i class="fas fa-shopping-basket"></i><span class="badge badge-notify my-cart-badge text-warning"> </span>
+                        </a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
 
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Heading Row -->
+        <!-- Why Retech -->
         <div class="row align-items-center my-5">
             <div class="col-lg-7">
                 <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
             </div>
-            <!-- /.col-lg-8 -->
             <div class="col-lg-5">
                 <h1 class="font-weight-light">WHY RETECH?</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla sint, quibusdam vel rerum debitis odio totam beatae, itaque cupiditate nesciunt voluptatibus sapiente esse inventore doloribus modi? Aspernatur ab consectetur tenetur. Itaque
-                    cupiditate nesciunt voluptatibus sapiente esse inventore doloribus modi? Aspernatur ab consectetur tenetur.</p>
-
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sed aliquid dolorem possimus unde eaque quas eius. Quibusdam ut, enim optio eaque sit, similique dolor repellendus corporis harum vero, cum commodi. Dolor sunt laboriosam
+                    ullam maiores quaerat, sit similique dolorem atque vitae eveniet blanditiis. Consequuntur aut rerum sunt, iure, inventore temporibus omnis soluta distinctio. Cumque officia, impedit suscipit aperiam autem.</p>
             </div>
-            <!-- /.col-md-4 -->
         </div>
-        <!-- / Heading row -->
 
-        <!-- Call to Action Well -->
-        <div class="card text-white bg-warning my-5 py-4 text-center">
+
+        <!-- Call to Action -->
+        <div class="card text-white bg-warning my-5 py-2 text-center">
             <div class="card-body bg-info">
-                <p class="text-white">
-                    <h4>THINK THE FUTURE: Reuse To Reduce Enormously Increasing Waste Around The World!!!</h4>
-                </p>
+                <h4 class="text-white">
+                    THINK THE FUTURE: Reuse To Reduce Enormously Increasing Waste Around The World!
+                </h4>
             </div>
         </div>
+        <hr class="mt-4">
 
         <!-- Content Row -->
         <div class="row">
-
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="img/motorola.png" alt=""></a>
@@ -117,10 +140,8 @@
                             Motorola G7 Power i mkt fint skick, sparsamt använd. Skärmskydd sedan dag 1. Svart färg. Olåst, fungerar med alla operatörer.
                         </p>
                     </div>
-
                 </div>
             </div>
-
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="img/Jbl.png" alt=""></a>
@@ -131,7 +152,6 @@
                         <h5>800 Kr</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
                     </div>
-
                 </div>
             </div>
 
@@ -145,7 +165,6 @@
                         <h5>7900 kr</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
                     </div>
-
                 </div>
             </div>
 
@@ -159,7 +178,6 @@
                         <h5>400 Kr</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
                     </div>
-
                 </div>
             </div>
 
@@ -173,7 +191,6 @@
                         <h5>250 Kr</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
                     </div>
-
                 </div>
             </div>
 
@@ -187,26 +204,62 @@
                         <h5>1600 Kr</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
                     </div>
-
                 </div>
             </div>
-
         </div>
-        <!-- / content row -->
-
     </div>
     <!-- /.container -->
 
+    <!-- /footer -->
+    <footer id="footer" class="site-footer">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-sm-12 col-md-8">
+                    <h6><b>Find Us</b></h6>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2034.2135041573024!2d18.055839615561407!3d59.346083816721794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d6c1f42b387%3A0xdfa8086ea7907082!2sTulegatan%2041%2C%20113%2053%20Stockholm!5e0!3m2!1ssv!2sse!4v1575978745224!5m2!1ssv!2sse"
+                        width="300" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+
+                <div class="col-xs-6 col-md-4">
+                    <h6><b>Contact Us</b></h6>
+                    <ul class="footer-contact">
+                        <li>Phone: <b>010-534 28 90</b></li>
+                        <li>E-Mail: <b>info@Retech.se</b></li>
+                        <li>Address: <b>Tulegatan 41113 53 Stockholm</b></li>
+                        <li>Opening Hours: <b>Everyday 08 - 17:00</b></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <hr class=" mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-sm-6 col-xs-12">
+                    <p class="copyright-text">Copyright &copy; 2019 ReTech</p>
+                </div>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <ul class="social-icons">
+                        <li><a class="facebook" href="http://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                        <li><a class="twitter" href="http://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a class="linkedin" href="http://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
-
-
+    <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
 
+
     <script type="text/javascript" src="main.js"></script>
+
 
 </body>
 
