--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
                             Products
                         </a>
                         <div class="dropdown-menu bg-dark">
-                            <a class="dropdown-item text-light" href="#">Computers</a>
+                            <a class="dropdown-item text-light" href="../ReTech/html/products.html">All Products</a>
                             <a class="dropdown-item text-light" href="#">Phones</a>
                             <a class="dropdown-item text-light" href="#">TVs</a>
                             <a class="dropdown-item text-light" href="#">Cameras</a>
