--- a/html/products.html
+++ b/html/products.html
@@ -28,7 +28,7 @@
                     <div id="navbarCollapse" class="collapse navbar-collapse">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">
+                                <a href="../main.html" class="nav-link active">
                                             Home
                                         </a>
                             </li>
