--- a/main.html
+++ b/main.html
@@ -21,41 +21,6 @@
 </head>
 
 <body>
-    <!-- Carousel -->
-    <div class="container-fluid">
-        <div class="col-12">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                </ol>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="my-carousel">
-                            <img src="img/bild1.jpg" class="w-50" alt="...">
-                            <img src="img/bild2.jpg" class="w-50" alt="...">
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="my-carousel">
-                            <img src="img/bild3.jpg" class="w-50" alt="...">
-                            <img src="img/bild4.jpg" class="w-50" alt="...">
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-    <hr class=" mt-4">
-
     <!-- Navbar -->
     <nav class="navbar bg-dark navbar-expand-md navbar-dark fixed-top" id="nav-main">
         <div class="container">
@@ -100,6 +65,43 @@
         </div>
     </nav>
 
+    <!-- Carousel -->
+    <div class="container-fluid">
+        <div class="col-12">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="my-carousel">
+                            <img src="img/bild1.jpg" class="w-50" alt="...">
+                            <img src="img/bild2.jpg" class="w-50" alt="...">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="my-carousel">
+                            <img src="img/bild3.jpg" class="w-50" alt="...">
+                            <img src="img/bild4.jpg" class="w-50" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+
+    <hr class=" mt-4">
+
     <!-- Page Content -->
     <div class="container">
 
@@ -117,7 +119,7 @@
 
 
         <!-- Call to Action -->
-        <div class="card text-white bg-warning my-5 py-2 text-center">
+        <div class="card text-white bg-warning my-4  pl-4 text-center">
             <div class="card-body bg-info">
                 <h4 class="text-white">
                     THINK THE FUTURE: Reuse To Reduce Enormously Increasing Waste Around The World!
@@ -232,7 +234,7 @@
                 </div>
             </div>
         </div>
-        <hr class=" mt-4">
+        <hr class="mt-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-6 col-xs-12">
