--- a/product.html
+++ b/product.html
@@ -71,25 +71,43 @@
         </div>
     </nav>
 
-
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Heading Row -->
-        <div class="row align-items-center my-5">
-            <div class="col-lg-7">
-                <img class="img-fluid rounded mb-4 mb-lg-0" src="img/foto_44.jpg" alt="why retech">
-            </div>
 
-            <div class="col-lg-5">
-                <h1 class="font-weight-light">WHY RETECH?</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos harum repellendus eaque. Magnam, non? Architecto, explicabo minus. Atque nobis dicta soluta quae laborum voluptatibus itaque eius saepe unde doloremque explicabo, eaque perspiciatis
-                    temporibus recusandae provident? Esse cupiditate tenetur quibusdam sit error totam inventore, consectetur, praesentium, minus maxime iusto non modi eius quidem odit aspernatur consequuntur? Neque quidem iste quisquam corrupti.</p>
+
+        <!-- / Services row -->
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-3 card  p-3 text-center border border-warning">
+
+                    <i class="fas fa-shipping-fast bg-warning text-primary py-1"></i>
+                    <p class=" card-text ">
+                        <h5 class="text-uppercase ">Advanced Shipping</h5>
+                        Free Shipping Over 2000 Kr.
+                    </p>
+
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3 card  p-3 text-center border border-warning">
+                    <i class="fas fa-headset bg-warning text-primary py-1"></i>
+                    <p class="card-text">
+                        <h5 class="text-uppercase ">Premium Support</h5>
+                        Free Shipping Over 2000 Kr.
+                    </p>
+
+                </div>
+                <div class="col-lg-4 col-md-6 mb-3 card  p-3 text-center border border-warning">
+                    <i class="fas fa-dolly bg-warning text-primary py-1"></i>
+                    <p class="card-text">
+                        <h5 class="text-uppercase ">30 Day Return</h5>
+                        Free Shipping Over 2000 Kr.
+                    </p>
+                </div>
             </div>
         </div>
-        <!-- / Heading row -->
 
         <hr class=" mt-4">
+
         <!-- Content Row -->
         <div class="row" id="productCont">
 
@@ -159,7 +177,6 @@
     </footer>
 
 
-    <button onclick="topFunction()" id="goToTopBtn" title="Go to top"><i class="fas fa-arrow-alt-circle-up"></i></button>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -167,6 +184,7 @@
 
 
     <script type="text/javascript" src="product.js"></script>
+    <link rel="stylesheet" href="jquery-3.2.1.js">
 
 
 </body>
