--- a/html/cart.html
+++ b/html/cart.html
@@ -48,7 +48,7 @@
                     <p><a href="#">Product 3</a> <span class="price">$8</span></p>
                     <p><a href="#">Product 4</a> <span class="price">$2</span></p> -->
                     <hr>
-                    <p>Total <span class="priceSum" style="color:black"><b></b></span></p>
+                    <p>Total: <span id="priceSum" style="color:black"><b></b></span></p>
                 </div>  
                             <form >
                                 <div> <!-- <div class="row col-75"> -->
@@ -86,7 +86,7 @@
                                     </div>
                                 </div>
                                  <!-- <div class="col-25"> -->
-                                    <div class="col-lg-4 col-md-6">
+                                    <div class="col-lg-6 col-md-6">
                                         <h4>Payment</h4>
                                         <i class="fab fa-paypal"></i>
                                         <i class="fab fa-cc-paypal"></i>
