--- a/checkout.html
+++ b/checkout.html
@@ -95,7 +95,7 @@
                         <p><a href="#">Product 3</a> <span class="price">$8</span></p>
                         <p><a href="#">Product 4</a> <span class="price">$2</span></p> -->
                     <hr>
-                    <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+                    <p>Total: <span id="priceSum" style="color:black"><b>$30</b></span></p>
                 </div>
 
                 <form>
