--- a/html/cart.html
+++ b/html/cart.html
@@ -48,7 +48,7 @@
                             ABOUT
                         </a>
                     </li>
-
+                    <!-- Hej -->
                     <li class="nav-item">
                         <a href="#footer" class="nav-link active">
                             CONTACT
